# team-aajk

./: .gitignore  Dockerfile  DockerfileBack  DockerfileFront  README.md  pyproject.toml  requirements-app.txt  requirements-backoffice.txt  requirements-base.txt  requirements-mlflow.txt  requirements-notebooks.txt
.streamlit/: config.toml
analysis/: evaluate.py  experiments.py  histograms.py  mlflow-experiments.py  tokens.py  words.py
app/: app.py  app.yaml  chat.css  chat.html  chat.js  config.yml  main.py  style.css
app/static/: frontoffice.js  index.html  style.css
backoffice/: 0_Welcome.py  deploy.py  session.py  shared.py  streamlit.py
backoffice/pages/: 0_Data_Selection.py  1_Checks_at_Word_level.py  1_⚙_Setup.py  2_Checks_at_Sentence_Level.py  3_Model_Choice.py  4_Finish_Setup.py  4_Model_Calibration.py  5_Model_Explanations.py  6_Finish_Setup.py  subpage.py
backoffice/steps/: calibration.py  check_sentence_level.py  check_word_level.py  data_selection.py  finish.py  model_choice.py
dataload/: dataloading.py
datasets/: fda.yml  fedora.yml  test1.ipynb  validation_europcar_id.yml  validation_europcar_ood.yml  validation_fda_id.yml  validation_fda_ood.yml  validation_fedora_id.yml  validation_fedora_ood.yml  validation_id.yml  validation_nih_id.yml  validation_nih_ood.yml  validation_olympics_id.yml  validation_olympics_ood.yml  validation_ood.yml  validation_wwf_id.yml  validation_wwf_ood.yml
eda/: data-exploration.ipynb  data-lineage.md  requirements.txt  scraping.ipynb
notebooks/: TODO.md  embeddings_eda.ipynb  iterations.ipynb  performance_baseline.ipynb  scraping_cleanups.ipynb  walkthrough.ipynb
notebooks/tensorboard_embedding_custom2/: projector_config.pbtxt
pipelines/: filtering.py  persistence.py
pipelines/impl/: anomaly_detection.py  bm25.py  paragraph.py  preprocessing.py  tokenizing.py
resources/chatterbox/: botprofile.yml  support.yml
resources/convo/convo-bbc/: The Flatmates - Archive Episode 81.txt  The Flatmates - Archive Episode 82.txt  The Flatmates - Archive Episode 86.txt  The Flatmates - Archive Episode 88.txt  The Flatmates - Archive Episode 89.txt  The Flatmates - Archive Episode 92.txt  The Flatmates - Episode 1.txt  The Flatmates - Episode 10.txt  The Flatmates - Episode 100.txt  The Flatmates - Episode 101.txt  The Flatmates - Episode 102.txt  The Flatmates - Episode 103.txt  The Flatmates - Episode 104.txt  The Flatmates - Episode 105.txt  The Flatmates - Episode 106.txt  The Flatmates - Episode 107.txt  The Flatmates - Episode 108.txt  The Flatmates - Episode 109.txt  The Flatmates - Episode 11.txt  The Flatmates - Episode 110.txt  The Flatmates - Episode 1111.txt  The Flatmates - Episode 112.txt  The Flatmates - Episode 113.txt  The Flatmates - Episode 114.txt  The Flatmates - Episode 115.txt  The Flatmates - Episode 116.txt  The Flatmates - Episode 117.txt  The Flatmates - Episode 118.txt  The Flatmates - Episode 119.txt  The Flatmates - Episode 12.txt  The Flatmates - Episode 120.txt  The Flatmates - Episode 121.txt  The Flatmates - Episode 122.txt  The Flatmates - Episode 123.txt  The Flatmates - Episode 124.txt  (+147 more)
resources/dialogues/: FDA_dialogue.csv  dialogues.ipynb
resources/scraping/: europcar.csv  europcar.tsv  europcar.yaml  europcar.yml  fda.csv  fda.tsv  fda.yml  fedora.csv  fedora.tsv  fedora.yaml  fedora.yml  nih.csv  nih.tsv  nih.yml  olympics.csv  olympics.tsv  olympics.yml  wwf.csv  wwf.tsv  wwf.yml
scraping/: exports.py  firstscrape.ipynb  scraper.py  scrapers.py  scraping.ipynb
tests/: model_persistence_test.py  preprocessing_test.py
train/: config.yaml  pipeline.yml  training.py
train/conf/: config.yaml
train/pipeline/: template.yaml
transcribe/: transcribe.py
(+2011 files in other folders)
