[tool.poetry]
name = "utterances-filter"
version = "0.1.0"
description = ""
authors = ["Jean-Luc Thirion <thirion.jl@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "dataload" }
]

# Dependencies useful to all other groups
[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
nltk = "^3.8.1"
pyyaml = "^6.0"
scikit-learn = "^1.2.0"
sentence-transformers = "^2.2.2"
h5py = "^3.8.0"
setuptools = "^67.6.0"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cpu/torchvision-0.15.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}

# Dependencies useful to "notebooks", "backoffice" and run stuff in "train"
[tool.poetry.group.ml]
optional = true
[tool.poetry.group.ml.dependencies]
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
hydra-core = "^1.3.1"
mlflow-skinny = "^2.2.2"

[tool.poetry.group.notebooks]
optional = true
[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.21.3"
tensorboard = "^2.11.2"
svgling = "^0.3.1"
bokeh = "^3.0.3"
lime = "^0.2.0.1"

#umap-learn = "^0.5.3"
#llvmlite = [
#    { version = "^0.39.1", markers = "platform_machine == 'arm64'" }
#]

# Dependencies to run the front-office app: the conversation filter itself
[tool.poetry.group.app]
optional = true
[tool.poetry.group.app.dependencies]
fastapi = "^0.89.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
python-multipart = "^0.0.5"
aiofiles = "^22.1.0"
requests = "^2.28.2"
websockets = "^10.4"
deepgram-sdk = "^2.3.0"
python-dotenv = "^1.0.0"

# Useful only for scraping
[tool.poetry.group.scrape]
optional = true
[tool.poetry.group.scrape.dependencies]
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = {version = "^23.1.0", extras = ["d"]}
watchdog = "^2.3.0"
mypy = "^1.0.1"
ipykernel = "^6.21.3"


[tool.poetry.group.backoffice]
optional = true
[tool.poetry.group.backoffice.dependencies]
streamlit = "^1.19.0"
lime = "^0.2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
